--- a/source/assets/css/partials/_base.scss
+++ b/source/assets/css/partials/_base.scss
@@ -7,7 +7,7 @@
 @import "tools/type";
 //Sections
 @import "sections/header";
-@import "sections/nav";
+@import "sections/content";
 @import "sections/footer";
 //Devices
 @import "tools/devices";
