--- a/source/partials/header.erb
+++ b/source/partials/header.erb
@@ -1,2 +1,10 @@
-<div>Hello, this is header</div>
-<%= partial "partials/nav" %>
+<header class="main-header">
+	<div class="grid">
+		<a href="/" class="logo">Auroran Dragons</a>
+		<nav>
+			<a href="//upstatenovel.com">Upstate</a>
+			<a href="/armory">Armory</a>
+			<a href="/contact">Contact</a>
+		</nav>
+	</div>
+</header>
