--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,48 @@
 ---
-title: Welcome to Earth
+title: The Auroran Way
 ---
 <%= partial "partials/header" %>
+<section class="main">
+	<div class="grid">
+		<div class="col-6-12">
+			<h1>The Auroran Way</h1>
+			<ul>
+				<li>Encourage corporations to better their communities</li>
+				<li>Better communities attract valuable talent</li>
+				<li>Responsible corporations do not require taxes</li>
+			</ul>
+		</div>
+		<div class="col-6-12">
+			<div class="noticeme">
+				<p><i class="fa fa-hand-rock-o"></i> Health and Wealth for Every American starts with us and succeeds with you. If you believe what we believe, tell the people you respect.</p>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="callout">
+	<div class="grid">
+		<div class="col-6-12">
+			<div class="block">
+				<header>
+					<h1>Our Story</h1>
+					<h2><i class="fa fa-clock-o"></i> Labor Day, 2015</h2>
+				</header>
+				<p>One free chapter every week, but once you're done, you can never read it for the first time again, so in a way, it costs something.</p>
+				<a href="//upstatenovel.com" class="cta">Read Upstate</a>
+			</div>
+		</div>
+		<div class="col-6-12">
+			<div class="block">
+				<header>
+					<h1>The Network</h1>
+				</header>
+				<p>Subscribe to the Auroran Propaganda Network to receive new Upstate chapters, short stories, essays, and other works by the Auroran Dragons.</p>
+				<form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
+					<input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
+					<button class="cta" type="submit">Subscribe</button>
+				</form>
+			</div>
+		</div>
+	</div>
+</section>
 <%= partial "partials/footer" %>
