--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,14 +1,8 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Something Something Something">
-		<title><%= current_page.data.title || "Time Sensitive Boilerplate" %></title>
-		<%= stylesheet_link_tag "styles" %>
-	</head>
+	<%= partial "partials/head" %>
 	<body class="<%= page_classes %>">
 		<%= yield %>
+		<%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js", "main" %>
 	</body>
 </html>
