--- a/source/partials/footer.erb
+++ b/source/partials/footer.erb
@@ -1,2 +1,10 @@
-<div>Hello, this is footer</div>
-<%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js", "main" %>
+<div class="grid">
+	<footer class="main-footer">
+		<p>&copy; Auroran Dragons 2015</p>
+		<nav>
+			<a href="mailto:propaganda@aurorandragons.com"><i class="fa fa-envelope-o"></i> propaganda@aurorandragons.com</a>
+			<a href="//twitter.com/AuroranDragons"><i class="fa fa-twitter"></i> twitter</a>
+			<a href="//www.facebook.com/aurorandragons/"><i class="fa fa-facebook"></i> facebook</a>
+		</nav>
+	</footer>
+</div>
