more general structure
more realignment, removing “chapters” supdir, placed upstate under
propaganda

--- a/source/partials/header.erb
+++ b/source/partials/header.erb
@@ -2,7 +2,7 @@
 	<div class="grid">
 		<a href="/" class="logo">Auroran Dragons</a>
 		<nav>
-			<a href="/upstate">Upstate</a>
+			<a href="/propaganda">Propaganda</a>
 			<a href="/armory">Armory</a>
 			<a href="/contact">Contact</a>
 		</nav>
