--- a/source/propaganda/index.html.erb
+++ b/source/propaganda/index.html.erb
@@ -5,7 +5,9 @@ title: Propaganda
 <section class="main">
 	<div class="grid">
 		<div class="col-6-12">
-			<h1>Upstate</h1>
+			<h1>Propaganda</h1>
+      <p>Our story starts with fiction.  Our work brings it to life.</p>
+      <a href="/upstate/chapter1" class="button">Read Upstate</a>
 		</div>
 	</div>
 </section>
