--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Propaganda
+title: Upstate
 ---
 <%= partial "partials/header" %>
 <section class="main">
@@ -8,16 +8,22 @@ title: Propaganda
 			<h1>Upstate</h1>
 			<ul>
 				<li>
-					<a href="/upstate/sections/prologue">Prologue</a>
+					<a href="/upstate/prologue">Prologue - The Gray Death</a>
 				</li>
 				<li>
-					<a href="/upstate/sections/chapter1">Chapter One</a>
+					<a href="/upstate/chapter1">Chapter One - Wake Up</a>
 				</li>
 				<li>
-					<a href="/upstate/sections/chapter2">Chapter Two</a>
+					<a href="/upstate/chapter2">Chapter Two - Where Did It All Go Wrong?</a>
 				</li>
 				<li>
-					<a href="/upstate/sections/chapter3">Chapter Three</a>
+					<a href="/upstate/chapter3">Chapter Three - The Superior Warfare of SkyPrincess FairySparkle</a>
+				</li>
+				<li>
+					<a href="/upstate/chapter4">Chapter Four - Bring A Photo Of Their Faces</a>
+				</li>
+				<li>
+					Chapter Five - Done Deal (10/5/15)
 				</li>
 			</ul>
 		</div>
