Brought up Upstate to standards, added chapter 4

--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -8,19 +8,19 @@ title: Upstate
 			<h1>Upstate</h1>
 			<ul>
 				<li>
-					<a href="/upstate/prologue">Prologue - The Gray Death</a>
+					<a href="/propaganda/upstate/prologue">Prologue - The Gray Death</a>
 				</li>
 				<li>
-					<a href="/upstate/chapter1">Chapter One - Wake Up</a>
+					<a href="/propaganda/upstate/chapter1">Chapter 1 - Wake Up</a>
 				</li>
 				<li>
-					<a href="/upstate/chapter2">Chapter Two - Where Did It All Go Wrong?</a>
+					<a href="/propaganda/upstate/chapter2">Chapter 2 - Where Did It All Go Wrong?</a>
 				</li>
 				<li>
-					<a href="/upstate/chapter3">Chapter Three - The Superior Warfare of SkyPrincess FairySparkle</a>
+					<a href="/propaganda/upstate/chapter3">Chapter 3 - The Superior Warfare of SkyPrincess FairySparkle</a>
 				</li>
 				<li>
-					<a href="/upstate/chapter4">Chapter Four - Bring A Photo Of Their Faces</a>
+					<a href="/propaganda/upstate/chapter4">Chapter 4 - Bring A Photo Of Their Faces</a>
 				</li>
 				<li>
 					Chapter Five - Done Deal (10/5/15)
