--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -23,7 +23,7 @@ title: Upstate
 					<a href="/propaganda/upstate/chapter4">Chapter 4 - Bring A Photo Of Their Faces</a>
 				</li>
 				<li>
-					Chapter Five - Done Deal (10/5/15)
+					Chapter 5 - Done Deal (10/5/15)
 				</li>
 			</ul>
 		</div>
