--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -142,7 +142,10 @@ body{background-color: darken($c_b, 42%);}
 		line-height: 1.5;
 	}
 	h1{font-size: 22px;}
-	h1.story-title
+	h1.story-title {
+		font-size: 72px;
+		text-align: center;
+	}
 	h2{font-size: 20px;}
 	h3{font-size: 18px;}
 	h4{font-size: 16px;}
