modified signup, adding to footer as experiment

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -6,7 +6,7 @@ title: Armory
 	<div class="grid">
 		<div class="col-6-12">
 			<h1>Contact</h1>
-			<p>The Dragons can be contacted in a number of ways.</p>
+			<p>The Dragons can be contacted in a number of ways:</p>
 			<ul>
 				<li><a href="mailto:propaganda@aurorandragons.com"><i class="fa fa-envelope-o"></i> propaganda@aurorandragons.com</a></li>
 				<li><a href="//twitter.com/AuroranDragons"><i class="fa fa-twitter"></i> twitter</a></li>
