--- a/source/partials/signup.erb
+++ b/source/partials/signup.erb
@@ -1,10 +1,17 @@
-<div class="grid">
-  <footer class="main-footer">
-    <p>&copy; Auroran Dragons 2015</p>
-    <nav>
-      <a href="mailto:propaganda@aurorandragons.com"><i class="fa fa-envelope-o"></i> propaganda@aurorandragons.com</a>
-      <a href="//twitter.com/AuroranDragons"><i class="fa fa-twitter"></i> twitter</a>
-      <a href="//www.facebook.com/aurorandragons/"><i class="fa fa-facebook"></i> facebook</a>
-    </nav>
-  </footer>
+<div class="col-6-12">
+  <div class="block">
+    <header>
+      <h1>Subscribe to the Auroran Propaganda Network</h1>
+    </header>
+    <ul>
+      <li>New Upstate Chapters</li>
+      <li>Upstate Chronicles: Tales from Beyond the Hills</li>
+      <li>Essays by the Auroran Dragons</li>
+    </ul>
+    <p>Subscribe to the Auroran Propaganda Network to receive new Upstate chapters, short stories, essays, and other works by the Auroran Dragons.</p>
+    <form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
+      <input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
+      <button class="cta" type="submit">Subscribe</button>
+    </form>
+  </div>
 </div>
