--- a/source/partials/footer.erb
+++ b/source/partials/footer.erb
@@ -1,4 +1,5 @@
 <div class="grid">
+  <%= partial "partials/signup" %>
 	<footer class="main-footer">
 		<p>&copy; Auroran Dragons 2015</p>
 		<nav>
