updated signup partial

--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -78,6 +78,12 @@ body{background-color: darken($c_b, 42%);}
 			color: lighten($c_b, 15%);
 			padding: 20px;
 		}
+		ul{
+			font-size: 14px;
+			line-height: 2;
+			color: lighten($c_b, 15%);
+			padding: 20px;
+		}
 		button.cta,
 		a.cta{
 			display: block;
