--- a/source/partials/footer.erb
+++ b/source/partials/footer.erb
@@ -1,5 +1,7 @@
 <div class="grid">
-  <%= partial "partials/signup" %>
+  <section class="callout">
+    <%= partial "partials/signup" %>
+  </section>
 	<footer class="main-footer">
 		<p>&copy; Auroran Dragons 2015</p>
 		<nav>
