--- a/source/partials/signup.erb
+++ b/source/partials/signup.erb
@@ -5,10 +5,9 @@
     </header>
     <ul>
       <li>New Upstate Chapters</li>
-      <li>Upstate Chronicles: Tales from Beyond the Hills</li>
+      <li>Upstate Short Stories</li>
       <li>Essays by the Auroran Dragons</li>
     </ul>
-    <p>Subscribe to the Auroran Propaganda Network to receive new Upstate chapters, short stories, essays, and other works by the Auroran Dragons.</p>
     <form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
       <input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
       <button class="cta" type="submit">Subscribe</button>
