minor list edit

--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -78,7 +78,7 @@ body{background-color: darken($c_b, 42%);}
 			color: lighten($c_b, 15%);
 			padding: 20px;
 		}
-		ul{
+		ul li{
 			font-size: 14px;
 			line-height: 2;
 			color: lighten($c_b, 15%);
