undid signup change

--- a/source/partials/signup.erb
+++ b/source/partials/signup.erb
@@ -1,14 +1,16 @@
-<div class="block">
-  <header>
-    <h1>Subscribe to the Auroran Propaganda Network</h1>
-  </header>
-  <ul>
-    <li>New Upstate Chapters</li>
-    <li>Upstate Short Stories</li>
-    <li>Essays by the Auroran Dragons</li>
-  </ul>
-  <form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
-    <input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
-    <button class="cta" type="submit">Subscribe</button>
-  </form>
+<div class="col-6-12">
+  <div class="block">
+    <header>
+      <h1>Subscribe to the Auroran Propaganda Network</h1>
+    </header>
+    <ul>
+      <li>New Upstate Chapters</li>
+      <li>Upstate Short Stories</li>
+      <li>Essays by the Auroran Dragons</li>
+    </ul>
+    <form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
+      <input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
+      <button class="cta" type="submit">Subscribe</button>
+    </form>
+  </div>
 </div>
