--- a/source/partials/signup.erb
+++ b/source/partials/signup.erb
@@ -3,7 +3,7 @@
     <header>
       <h1>Subscribe to the Auroran Propaganda Network</h1>
     </header>
-    <ul>
+    <ul class="signup-reasons">
       <li>New Upstate Chapters</li>
       <li>Upstate Short Stories</li>
       <li>Essays by the Auroran Dragons</li>
