signup form update

--- a/source/armory.html.erb
+++ b/source/armory.html.erb
@@ -12,18 +12,7 @@ title: Armory
 </section>
 <section class="callout">
 	<div class="grid">
-		<div class="col-6-12">
-			<div class="block">
-				<header>
-					<h1>The Network</h1>
-				</header>
-				<p>Subscribe to the Auroran Propaganda Network to receive new Upstate chapters, short stories, essays, and other works by the Auroran Dragons.</p>
-				<form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
-					<input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
-					<button class="cta" type="submit">Subscribe</button>
-				</form>
-			</div>
-		</div>
+		<%= partial "partials/signup" %>
 	</div>
 </section>
 <%= partial "partials/footer" %>
