--- a/source/partials/footer.erb
+++ b/source/partials/footer.erb
@@ -1,6 +1,7 @@
-<%= partial "partials/signup" %>
 <div class="grid">
-  
+  <%= partial "partials/signup" %>
+</div>
+<div class="grid">
 	<footer class="main-footer">
 		<p>&copy; Auroran Dragons 2015</p>
 		<nav>
