--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -78,6 +78,12 @@ body{background-color: darken($c_b, 42%);}
 			color: lighten($c_b, 15%);
 			padding: 20px;
 		}
+		ul.signup-reasons li{
+			font-size: 14px;
+			line-height: 2;
+			color: lighten($c_b, 15%);
+			padding: 20px;
+		}
 		button.cta,
 		a.cta{
 			display: block;
@@ -143,9 +149,9 @@ body{background-color: darken($c_b, 42%);}
 	}
 	h1{font-size: 22px;}
 	
-	.story-title {
-		font-size: 72px;
-		text-align: center;
+	h1.story-title {
+		font-size: 72px !important;
+		text-align: center !important;
 	}
 
 	h2{font-size: 20px;}
@@ -173,12 +179,8 @@ body{background-color: darken($c_b, 42%);}
 		}
 	}
 }
-ul.signup-reasons li{
-	font-size: 14px;
-	line-height: 2;
-	color: lighten($c_b, 15%);
-	padding: 20px;
-}
+
+
 a.button{
 	display: inline-block;
 	margin: 0px 0px 20px 0px;
