changed signup text

--- a/source/partials/signup.erb
+++ b/source/partials/signup.erb
@@ -3,11 +3,7 @@
     <header>
       <h1>Subscribe to the Auroran Propaganda Network</h1>
     </header>
-    <ul class="signup-reasons">
-      <li>New Upstate Chapters</li>
-      <li>Upstate Short Stories</li>
-      <li>Essays by the Auroran Dragons</li>
-    </ul>
+    <p>New Upstate chapters, short stories, essays, and more from the Auroran Dragons.</p>
     <form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
       <input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
       <button class="cta" type="submit">Subscribe</button>
