placed signup form at bottom of each chapter

--- a/source/propaganda/index.html.erb
+++ b/source/propaganda/index.html.erb
@@ -7,7 +7,7 @@ title: Propaganda
 		<div class="col-6-12">
 			<h1>Propaganda</h1>
         <p>Our story starts with fiction.  Our work brings it to life.</p>
-      <a href="/propaganda/upstate/prologue" class="button">Read Upstate</a>
+      <a href="/propaganda/upstate" class="button">Read Upstate</a>
 		</div>
 	</div>
 </section>
