--- a/source/layouts/layout_chapter.erb
+++ b/source/layouts/layout_chapter.erb
@@ -7,6 +7,7 @@
 			<div class="chapter">
 				<%= yield %>
 			</div>
+			<%= partial "partials/signup" %>
 		</div>
 		<%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js", "main" %>
 	</body>
