--- a/source/partials/signup.erb
+++ b/source/partials/signup.erb
@@ -3,7 +3,7 @@
     <header>
       <h1>Subscribe to the Auroran Propaganda Network</h1>
     </header>
-    <p>New Upstate chapters, short stories, essays, and more from the Auroran Dragons.</p>
+    <p>New Upstate chapters, short stories, and essays from the Auroran Dragons.</p>
     <form action="http://aurorandragons.createsend.com/t/i/s/trtkuh/" method="post" id="subForm">
       <input id="fieldEmail" name="cm-trtkuh-trtkuh" type="email" placeholder="Email" required />
       <button class="cta" type="submit">Subscribe</button>
