--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -153,7 +153,10 @@ body{background-color: darken($c_b, 42%);}
 		font-size: 72px !important;
 		text-align: center !important;
 	}
-
+	.chapterflag {
+		max-width: 400px;
+		max-height: 200px;
+	}
 	h2{font-size: 20px;}
 	h3{font-size: 18px;}
 	h4{font-size: 16px;}
