re-added flag, hopefully properly

--- a/source/propaganda/upstate/chapter4.html.md.erb
+++ b/source/propaganda/upstate/chapter4.html.md.erb
@@ -329,7 +329,7 @@ I head out to my car and send a message to Synthia asking if she can do lunch.  
 
 *To become legends in their lifetimes.*
 
-<%= tag :img, :src => "/assets/adflag_solo.png", :class => "chapterflag" %>
+<%= tag :img, :src => "/assets/img/adflag_solo-e1e62aa3.png", :class => "chapterflag", :style => "width:400px;height:200px;" %>
 
 *Welcome to Aurora.*
 
