updated signup/index text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,9 +7,9 @@ title: The Auroran Way
 		<div class="col-6-12">
 			<h1>The Auroran Way</h1>
 			<ul>
-				<li>Encourage corporations to better their communities</li>
+				<li>Encourage corporations to uphold their communities</li>
 				<li>Better communities attract valuable talent</li>
-				<li>Responsible corporations do not require taxes</li>
+				<li>Responsible corporations are better than taxes</li>
 			</ul>
 		</div>
 		<div class="col-6-12">
