minor index wording edit

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,7 +8,7 @@ title: The Auroran Way
 			<h1>The Auroran Way</h1>
 			<ul>
 				<li>Encourage corporations to uphold their communities</li>
-				<li>Better communities attract valuable talent</li>
+				<li>Better communities attract more valuable talent</li>
 				<li>Responsible corporations are better than taxes</li>
 			</ul>
 		</div>
