Fixing some bugs, changed chapter width on device

--- a/source/assets/css/partials/sections/_content.scss
+++ b/source/assets/css/partials/sections/_content.scss
@@ -1,6 +1,6 @@
 body{background-color: darken($c_b, 42%);}
 .main{
-	padding: 70px 20px;
+	padding: 70px 20px 70px 20px;
 	@extend .cf;
 	h1{
 		font-size: 30px;
@@ -9,6 +9,87 @@ body{background-color: darken($c_b, 42%);}
 		letter-spacing: 5px;
 		padding: 0px 0px 20px 0px;
 		color: #fff;
+	}
+	.block{
+		background-color: darken($c_b, 45%);
+		@include border-radius(5px);
+		border: 1px solid lighten($c_b, 15%);
+		header{
+			padding: 20px;
+			border-bottom: 1px solid lighten($c_b, 15%);
+			background-color: darken($c_b, 45%);
+			@include border-radius-top(5px);
+			@extend .cf;
+			h2,
+			h1{
+				float: left;
+				font-size: 12px;
+				text-transform: uppercase;
+				font-weight: 700;
+				color: #fff;
+				padding: 0px;
+			}
+			h2{
+				float: right;
+				color: lighten($c_b, 15%);
+			}
+		}
+		p{
+			font-size: 14px;
+			line-height: 2;
+			color: lighten($c_b, 15%);
+			padding: 20px;
+		}
+		ul.signup-reasons li{
+			font-size: 14px;
+			line-height: 2;
+			color: lighten($c_b, 15%);
+			padding: 20px;
+		}
+		button.cta,
+		a.cta{
+			display: block;
+			margin: 0px 20px 20px 20px;
+			text-decoration: none;
+			width: 200px;
+			color: #fff;
+			padding: 10px;
+			text-align: center;
+			text-transform: uppercase;
+			font-weight: 700;
+			font-size: 12px;
+			letter-spacing: 3px;
+			border: 1px solid darken($c_b, 20%);
+			@include border-radius(5px);
+			@include background-gradient(lighten($c_b, 10%), darken($c_b, 10%));
+			&:hover{
+				@include background-gradient($c_b, darken($c_b, 20%));
+			}
+		}
+		form{
+			display: block;
+			@extend .cf;
+		}
+		input{
+			display: block;
+			padding: 10px;
+			@include border-radius(5px);
+			border: 0px;
+			width: 45%;
+			margin-left: 20px;
+			float: left;
+			color: darken($c_b, 10%);
+		}
+		button.cta{
+			@include background-gradient(transparent, transparent);
+			border: 1px solid #fff;
+			float: right;
+			width: 40%;
+			cursor: pointer;
+			&:hover{
+				@include background-gradient(rgba(122, 74, 205, 0.1), rgba(122, 74, 205, 0.1));
+			}
+		}
 	}
 	p{
 		max-width: 350px;
@@ -129,6 +210,20 @@ body{background-color: darken($c_b, 42%);}
 			}
 		}
 	}
+	.noticeme{
+		background-color: rgba(122, 74, 205, 0.1);
+		padding: 20px;
+		border: 1px solid lighten($c_b, 15%);
+		@include border-radius(5px);
+		p{
+			color: lighten($c_b, 15%);
+			max-width: 100%;
+			font-size: 16px;
+			line-height: 1.5;
+			font-weight: 300;
+			padding: 0px;
+		}
+	}
 }
 .chapter{
 	padding: 20px 20px;
@@ -141,6 +236,48 @@ body{background-color: darken($c_b, 42%);}
 		line-height: 2;
 		padding: 0px 0px 20px 0px;
 		font-size: 14px;
+		a{
+			color: $c_b;
+			text-decoration: none;
+		}
+		a.button{
+			display: inline-block;
+			margin: 0px 0px 20px 0px;
+			text-decoration: none;
+			max-width: 70%;
+			color: #fff;
+			padding: 10px;
+			text-align: center;
+			text-transform: uppercase;
+			font-weight: 700;
+			font-size: 12px;
+			letter-spacing: 3px;
+			border: 1px solid darken($c_b, 20%);
+			@include border-radius(5px);
+			@include background-gradient(lighten($c_b, 10%), darken($c_b, 10%));
+			&:hover{
+				@include background-gradient($c_b, darken($c_b, 20%));
+			}
+		}
+	}
+	a.button{
+		display: inline-block;
+		margin: 0px 0px 20px 0px;
+		text-decoration: none;
+		max-width: 70%;
+		color: #fff;
+		padding: 10px;
+		text-align: center;
+		text-transform: uppercase;
+		font-weight: 700;
+		font-size: 12px;
+		letter-spacing: 3px;
+		border: 1px solid darken($c_b, 20%);
+		@include border-radius(5px);
+		@include background-gradient(lighten($c_b, 10%), darken($c_b, 10%));
+		&:hover{
+			@include background-gradient($c_b, darken($c_b, 20%));
+		}
 	}
 	h1,h2,h3,h4{
 		font-weight: 700;
@@ -148,7 +285,6 @@ body{background-color: darken($c_b, 42%);}
 		line-height: 1.5;
 	}
 	h1{font-size: 22px;}
-	
 	h1.story-title {
 		font-size: 72px !important;
 		text-align: center !important;
@@ -182,8 +318,6 @@ body{background-color: darken($c_b, 42%);}
 		}
 	}
 }
-
-
 a.button{
 	display: inline-block;
 	margin: 0px 0px 20px 0px;
