--- a/source/assets/css/partials/tools/_devices.scss
+++ b/source/assets/css/partials/tools/_devices.scss
@@ -31,6 +31,7 @@
 		padding-left: 0px;
 		padding-right: 0px;
 	}
+	.chapter{max-width: 100%;}
 }
 @media handheld, only screen and (max-width: 580px){
 	.callout{.block{input{width: 35%;}}}
