--- a/source/propaganda/upstate/chapter4.html.md.erb
+++ b/source/propaganda/upstate/chapter4.html.md.erb
@@ -333,4 +333,4 @@ I head out to my car and send a message to Synthia asking if she can do lunch.  
 
 *Welcome to Aurora.*
 
-## Next: Chapter 5 - Done Deal (10/5/15)
+<a href="/propaganda/upstate/chapter5" class="button">Next: Chapter 5 - Done Deal</a>
