added footers to chapters

--- a/source/layouts/layout_chapter.erb
+++ b/source/layouts/layout_chapter.erb
@@ -9,5 +9,6 @@
 			</div>
 		</div>
 		<%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js", "main" %>
+		<%= partial "partials/footer" %>
 	</body>
 </html>
