--- a/source/propaganda/upstate/chapter5.html.md.erb
+++ b/source/propaganda/upstate/chapter5.html.md.erb
@@ -7,7 +7,7 @@ layout: layout_chapter
 
 <h1 class="story-title">Upstate</h1>
 
-<a href="/propaganda/upstate/chapter4" class="button">Previous: Chapter 4 - Bring A Photo Of Their Faces</a>
+<a href="/propaganda/upstate/chapter4" class="button">Previous: Chapter 5 - Done Deal</a>
 
 # Chapter 4 - Bring A Photo Of Their Faces
 The Auroran Bionet is in my system within an hour.  It’s full of features I would have never asked for, but now I can’t imagine life without them.  There’s a monitor for all the important chemicals swimming through my brain, and it informs me my cortisol levels are through the roof.  Thanks, I didn’t need a computer to tell me I’m more stressed out than I’ve ever been.  Although, once I compare myself to the Auroran average, I’m actually way above the rest.  It’s that moment I catch myself shaking my wrist and rapping the side of my thumb against my thigh, so I light up a joint - doctor’s orders.
