fixed c5 title really

--- a/source/propaganda/upstate/chapter5.html.md.erb
+++ b/source/propaganda/upstate/chapter5.html.md.erb
@@ -7,9 +7,9 @@ layout: layout_chapter
 
 <h1 class="story-title">Upstate</h1>
 
-<a href="/propaganda/upstate/chapter4" class="button">Previous: Chapter 5 - Done Deal</a>
+<a href="/propaganda/upstate/chapter4" class="button">Previous: Chapter 4 - Bring A Photo Of Their Faces</a>
 
-# Chapter 4 - Bring A Photo Of Their Faces
+# Chapter 5 - Done Deal
 The Auroran Bionet is in my system within an hour.  It’s full of features I would have never asked for, but now I can’t imagine life without them.  There’s a monitor for all the important chemicals swimming through my brain, and it informs me my cortisol levels are through the roof.  Thanks, I didn’t need a computer to tell me I’m more stressed out than I’ve ever been.  Although, once I compare myself to the Auroran average, I’m actually way above the rest.  It’s that moment I catch myself shaking my wrist and rapping the side of my thumb against my thigh, so I light up a joint - doctor’s orders.
 
 There are a few other interesting tidbits, like a diet and exercise calculator that tells me precisely the foods I should eat and workouts I should perform to lose weight, build muscle, enhance flexibility, improve pain resistance, manage shock tolerance, pretty much a personalized trainer that knows my body better than I do.  There’s even a feature that shocks me if I deviate from my diet, or do fewer reps than it knows my body is capable of.  I think I’ll leave that one off.
