--- a/source/partials/head.erb
+++ b/source/partials/head.erb
@@ -2,7 +2,7 @@
 	<meta charset="utf-8">
 	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Something Something Something">
+	<meta name="description" content="Health and Wealth for Every American starts with us and succeeds with you. If you believe what we believe, tell the people you respect.">
 	<title>Auroran Dragons -  <%= current_page.data.title %></title>
 	<meta name="author" content="Nikko Mitrano Schaff">
 	<meta name="google-site-verification" content="4vVumemoWn-JX7JLwYFBStlEeIaWQRU9j5STKukO6cs" />
