--- a/source/propaganda/upstate/chapter5.html.md.erb
+++ b/source/propaganda/upstate/chapter5.html.md.erb
@@ -254,4 +254,4 @@ Once I’m done, I think back to learning in school that the ancient Egyptians b
 
 After a week of cleaning my home, I think I’m finally ready to move on.  The past is who I was, but today, I am an Auroran.  And Friday, I have a mission, from Anton Von Hitler.
 
-## Next: Chapter 6 - Buffalo Blitz (10/12/15)
+<a href="/propaganda/upstate/chapter6" class="button">Next: Chapter 6 - Buffalo Blitz</a>
