--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -25,6 +25,12 @@ title: Upstate
 				<li>
 					<a href="/propaganda/upstate/chapter5">Chapter 5 - Done Deal</a>
 				</li>
+				<li>
+					<a href="/propaganda/upstate/chapter6">Chapter 6 - Buffalo Blitz</a>
+				</li>
+				<li>
+					Chapter 7 - The Shoulders of Giants
+				</li>
 			</ul>
 		</div>
 	</div>
