--- a/source/propaganda/upstate/chapter6.html.md.erb
+++ b/source/propaganda/upstate/chapter6.html.md.erb
@@ -478,4 +478,4 @@ I’m pretty hammered by this point.  Franshesco invites me to Pantheon, and for
 
 At least I pick up hangover bottles on the way.  I’ve got martial arts tomorrow.  Everyone does.  Because of me.  This won’t be fun.
 
-## Next: Chapter 7 - The Shoulders of Giants (10/19/15)
+<a href="/propaganda/upstate/chapter7" class="button">Next: Chapter 7 - The Shoulders Of Giants</a> 
