--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -29,7 +29,10 @@ title: Upstate
 					<a href="/propaganda/upstate/chapter6">Chapter 6 - Buffalo Blitz</a>
 				</li>
 				<li>
-					Chapter 7 - The Shoulders of Giants
+					<a href="/propaganda/upstate/chapter6">Chapter 7 - The Shoulders of Giants</a>
+				</li>
+				<li>
+					Chapter 8 - Loyalty To The Mission (10/27/15)
 				</li>
 			</ul>
 		</div>
