--- a/source/propaganda/upstate/chapter7.html.md.erb
+++ b/source/propaganda/upstate/chapter7.html.md.erb
@@ -171,4 +171,4 @@ The Dragons have an insidious way of getting into your head.  The secret is to m
 
 I even wear it in Ithaca.
 
-## Next: Chapter 8 - Loyalty To The Mission (10/27/15)
+<a href="/propaganda/upstate/chapter8" class="button">Next: Chapter 8 - Loyalty to the Mission</a> 
