--- a/source/propaganda/upstate/index.html.erb
+++ b/source/propaganda/upstate/index.html.erb
@@ -29,10 +29,13 @@ title: Upstate
 					<a href="/propaganda/upstate/chapter6">Chapter 6 - Buffalo Blitz</a>
 				</li>
 				<li>
-					<a href="/propaganda/upstate/chapter6">Chapter 7 - The Shoulders of Giants</a>
+					<a href="/propaganda/upstate/chapter7">Chapter 7 - The Shoulders of Giants</a>
 				</li>
 				<li>
-					Chapter 8 - Loyalty To The Mission (10/27/15)
+					<a href="/propaganda/upstate/chapter8">Chapter 8 - Loyalty to the Mission</a>
+				</li>
+				<li>
+					Chapter 9 - Loyalty to the End (11/2/15)
 				</li>
 			</ul>
 		</div>
